edited jupyter notebook and html files

--- a/P1-Investigate-Dataset/Investigate_a_Dataset.ipynb
+++ b/P1-Investigate-Dataset/Investigate_a_Dataset.ipynb
@@ -6,7 +6,7 @@
     "tags": []
    },
    "source": [
-    "# Project: Investigate a Dataset - [TMDb movie data]\n",
+    "# Project: Investigate a Dataset - TMDb movie data\n",
     "\n",
     "## Table of Contents\n",
     "<ul>\n",
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -880,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -889,7 +889,7 @@
        "<AxesSubplot: ylabel='Frequency'>"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -918,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -928,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -941,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -969,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -979,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1028,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 27,
    "metadata": {
     "tags": []
    },
@@ -1038,7 +1038,8 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Investigate_a_Dataset.ipynb to html\n",
-      "[NbConvertApp] Writing 785616 bytes to Investigate_a_Dataset.html\n"
+      "[NbConvertApp] WARNING | Alternative text is missing on 5 image(s).\n",
+      "[NbConvertApp] Writing 479166 bytes to Investigate_a_Dataset.html\n"
      ]
     }
    ],
@@ -1064,7 +1065,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
